--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<button type="button" onclick=insert("=") class="equ">=</button>
 
 		<button type="button" onclick=insert("0") class="zero number">0</button>
-		<button type="button"onclick=insert(",")>.</button>
+		<button type="button"onclick=insert(".")>.</button>
 
 	</div>
 	<script>
